--- a/empresa.html
+++ b/empresa.html
@@ -14,7 +14,7 @@
            
             <div id="menu">
                 <div id="botao1" onclick="location.href='index.html'">Home</div>
-                <div id="botao2" onclick="location.href='Empresa.html'">Empresa</div>
+                <div id="botao2" onclick="location.href='empresa.html'">Empresa</div>
                 <div id="botao3" onclick="location.href='serviços.html'">Serviços</div>
                 <div id="botao4" onclick="location.href='contatos.html'">Contatos</div>
                 <div id="botao5" onclick="location.href='faleconosco.html'">Fale conosco</div>
