--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div id="corpo">
             <div id="topo">
-                <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Memórias da Ana </h1>   
+                <h1>Memórias da Ana</h1>   
             </div>
            
             <div id="menu">
