--- a/faleconosco.html
+++ b/faleconosco.html
@@ -13,11 +13,11 @@
             </div>
            
             <div id="menu">
-                <div id="botao1" onclick="location.href='index.html'">Home</div>
-                <div id="botao2" onclick="location.href='Empresa.html'">empresa</div>
-                <div id="botao3" onclick="location.href='serviços.html'">Serviços</div>
-                <div id="botao4" onclick="location.href='contatos.html'">Contatos</div>
-                <div id="botao5" onclick="location.href='faleconosco.html'">Fale conosco</div>
+                <div id="botao1" onclick="location.href='index.html'">Memória 1</div>
+                <div id="botao2" onclick="location.href='Empresa.html'">Memória 2</div>
+                <div id="botao3" onclick="location.href='serviços.html'">Memória 3</div>
+                <div id="botao4" onclick="location.href='contatos.html'">Memória 4</div>
+                <div id="botao5" onclick="location.href='faleconosco.html'">Memória 5</div>
             </div>
            
             <div id="conteudo">
