--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <div id="corpo">
             <div id="topo">
+                <img src="C:\xampp\htdocs\Projetos\Avaliacao\imagens\Pink and White Star Y2k Style Personal Brand Logo.png" alt="Imagem Esquerda" width="100%"> 
                 <h1>Memórias da Ana</h1>   
             </div>
            
