--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
            
             <div id="conteudo">
                 <div id="esquerda">
-                    <img src="https://www.a12.com/source/files/originals/minions.jpg" alt="Imagem Esquerda" width="100%">  
+                    <img src=""C:\xampp\htdocs\Projetos\Avaliacao\imagens\imagem 1.jpeg"" alt="Imagem Esquerda" width="100%">  
 
                 </div>
                 <div id="centro">
